@@ -38,6 +38,10 @@
 <p>2019-05-15  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pict.c (DecodeImage): Allocate output buffer used by
+ExpandBuffer() on the stack rather than as static data private to
+ExpandBuffer().  Eliminates a thread safety problem and also
+reduces BSS size.</li>
 <li>coders/webp.c (RegisterWEBPImage): Reduce BSS size.</li>
 </ul>
 </blockquote>
