@@ -1,5 +1,10 @@
 2019-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/pict.c (DecodeImage): Allocate output buffer used by
+	ExpandBuffer() on the stack rather than as static data private to
+	ExpandBuffer().  Eliminates a thread safety problem and also
+	reduces BSS size.
+
 	* coders/webp.c (RegisterWEBPImage): Reduce BSS size.
 
 2019-05-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
